--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,7 +1,23 @@
 <!DOCTYPE html>
 
 <html lang="en">
+<script type="text/javascript">
+    fetch("/api/sites").then(response => response.json()).then(sites => {
+        sites.forEach(site => {
+            const el = document.createElement('li');
+            el.innerText = site.url;
+            document.querySelector('#sites').append(el);
+        });
+    });
+</script>
+
 <body>
-<h1>Welcome to Spring, {{ name }}</h1>
+<h1>Добро пожаловать в {{ name }}</h1>
+<a href="139.59.131.146:3000"> Мониторинг </a>
+<br>
+<a href="139.59.131.146:8080/api/sites"> Сайты уже в системе в формате JSON </a>
+<br>
+<h3>Сайты:</h3>
+<ul id="sites"></ul>
 </body>
 </html>
