--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -23,7 +23,7 @@
 <h1>Добро пожаловать в {{ name }}</h1>
 <a href="http://139.59.131.146:3000"> Мониторинг </a>
 <br>
-<a href="http://139.59.131.146:8080/api/sites"> Сайты уже в системе в формате JSON </a>
+<a href="/api/sites"> Сайты уже в системе в формате JSON </a>
 <br>
 <h3>Сайты:</h3>
 <ul id="sites"></ul>
